# SuperMarioBros3

./: .gitignore  CMakeLists.txt  Colors.cpp  Colors.h  Console.cpp  README.md  SuperMario.sln  launch.json  raylib.h
SuperMario/: Character.h  Enemy.h  SuperMario.vcxproj  SuperMario.vcxproj.bak  SuperMario.vcxproj.filters
assets/: config.txt
assets/Animation/: enemies1.txt  luigi1.txt  luigi2.txt  luigi3.txt  mario1.txt  mario2.txt  mario3.txt  miscellaneous.txt  tiles1.txt
assets/Map/: 1-4.txt  Map1-1.txt  Map1-2.txt  Map1-3.txt  Map1-4.txt  Map1-5.txt
include/: Animation.h  AttackingState.h  Background.h  BaseBlock.h  Beetle.h  Block.h  BlockFactory.h  Bloober.h  BoomBoom.h  Bowser.h  Brick.h  Camera.h  CapedState.h  Character.h  CharacterState.h  Coin.h  Collision.h  Colors.h  DecorBlock.h  Effect.h  Enemy.h  Entity.h  Entity2.h  FPSManager.h  FileHandle.h  FireStarmanState.h  FireState.h  Fireball.h  Firesnake.h  Floor.h  Flower.h  GUI.h  GameEngine.h  Global.h  GoomBa.h  HiddenBlock.h  Hitbox.h  IdleState.h  InputManager.h  Item.h  (+37 more)
src/: Animation.cpp  AttackingState.cpp  Background.cpp  BaseBlock.cpp  Beetle.cpp  Block.cpp  Bloober.cpp  BoomBoom.cpp  Brick.cpp  Camera.cpp  CapedState.cpp  Character.cpp  CharacterState.cpp  Coin.cpp  Collision.cpp  Colors.cpp  Console.cpp  DecorBlock.cpp  Effect.cpp  Enemy.cpp  Entity.cpp  Entity2.cpp  FPSManager.cpp  FileHandle.cpp  FireStarmanState.cpp  FireState.cpp  Fireball.cpp  Firesnake.cpp  Floor.cpp  Flower.cpp  GUI.cpp  GameEngine.cpp  Global.cpp  GoomBa.cpp  HiddenBlock.cpp  Hitbox.cpp  IdleState.cpp  InputManager.cpp  Item.cpp  ItemBlock.cpp  (+34 more)
